bridge/base/0-atellasfleetfullvers-namespace.yaml
#! 0-atellasfleetfullvers-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: atellasfleetfullvers
    labels:
        com.docker.compose.project: atellasfleetfullvers
