bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: atellasfleetfullvers
    labels:
        com.docker.compose.project: atellasfleetfullvers
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: atellasfleetfullvers
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: atellasfleetfullvers
                com.docker.compose.service: backend
                com.docker.compose.network.atellasfleet-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: atellasfleet-backend
                  image: atellasfleetfullvers-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-9000
                      containerPort: 9000
                    - name: backend-80
                      containerPort: 80
                  volumeMounts:
                    - name: var-www-html-storage
                      mountPath: /var/www/html/storage
                    - name: var-www-html--env
                      mountPath: /var/www/html/.env
                      readOnly: true
            volumes:
                - name: var-www-html-storage
                  hostPath:
                    path: C:\Users\T490s Ha\Desktop\Projects\AtellasFleetFullVers\backend\storage
                - name: var-www-html--env
                  hostPath:
                    path: C:\Users\T490s Ha\Desktop\Projects\AtellasFleetFullVers\.env
                  readOnly: true
