bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: atellasfleetfullvers
    labels:
        com.docker.compose.project: atellasfleetfullvers
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: atellasfleetfullvers
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: atellasfleetfullvers
                com.docker.compose.service: frontend
                com.docker.compose.network.atellasfleet-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: atellasfleet-frontend
                  image: atellasfleetfullvers-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-3000
                      containerPort: 3000
