bridge/base/nginx-deployment.yaml
#! nginx-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
    namespace: atellasfleetfullvers
    labels:
        com.docker.compose.project: atellasfleetfullvers
        com.docker.compose.service: nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: atellasfleetfullvers
            com.docker.compose.service: nginx
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: atellasfleetfullvers
                com.docker.compose.service: nginx
                com.docker.compose.network.atellasfleet-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: atellasfleet-nginx
                  image: nginx:1.27-alpine
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: nginx-80
                      containerPort: 80
                    - name: nginx-443
                      containerPort: 443
                  volumeMounts:
                    - name: etc-nginx-conf-d-default-conf
                      mountPath: /etc/nginx/conf.d/default.conf
                      readOnly: true
                    - name: docker-entrypoint-d-10-generate-ssl-sh
                      mountPath: /docker-entrypoint.d/10-generate-ssl.sh
                      readOnly: true
                    - name: etc-nginx-ssl
                      mountPath: /etc/nginx/ssl
                    - name: var-www-backend-storage
                      mountPath: /var/www/backend/storage
                      readOnly: true
            volumes:
                - name: etc-nginx-conf-d-default-conf
                  hostPath:
                    path: C:\Users\T490s Ha\Desktop\Projects\AtellasFleetFullVers\nginx\default.conf
                  readOnly: true
                - name: docker-entrypoint-d-10-generate-ssl-sh
                  hostPath:
                    path: C:\Users\T490s Ha\Desktop\Projects\AtellasFleetFullVers\nginx\generate-ssl.sh
                  readOnly: true
                - name: etc-nginx-ssl
                  persistentVolumeClaim:
                    claimName: nginx-nginx-ssl
                - name: var-www-backend-storage
                  hostPath:
                    path: C:\Users\T490s Ha\Desktop\Projects\AtellasFleetFullVers\backend\storage
                  readOnly: true
